--- a/res/native/android/ant.properties
+++ b/res/native/android/ant.properties
@@ -1,4 +1,4 @@
-key.store=
-key.alias=
-key.store.password=
-key.alias.password=
+key.store=f:\\my-release-key.keystore
+key.alias=mecmaster
+key.store.password= pwd123
+key.alias.password= pwd123
